plugins {
	id 'org.springframework.boot' version '2.4.0'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

group = 'com.dicoding'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
}

dependencies {
	compileOnly 'org.projectlombok:lombok:1.18.16'
	annotationProcessor 'org.projectlombok:lombok:1.18.16'

	testCompileOnly 'org.projectlombok:lombok:1.18.16'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'

	implementation('org.springframework.boot:spring-boot-starter')
	implementation('com.linecorp.bot:line-bot-api-client:1.20.0')
	implementation('com.linecorp.bot:line-bot-model:1.20.0')
	implementation('org.apache.httpcomponents:httpclient:4.5.2')
	implementation('org.apache.httpcomponents:httpasyncclient:4.1.2')
	implementation('org.apache.commons:commons-lang3:3.7')
	implementation('org.apache.commons:commons-text:1.3')
	implementation('org.springframework:spring-jdbc')
	implementation('org.postgresql:postgresql')
	implementation('org.springframework.boot:spring-boot-starter-data-rest')
	implementation('org.jsoup:jsoup:1.8.3')
	implementation(group: 'commons-io', name:'commons-io',version:'2.6')
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}

test {
	useJUnitPlatform()
}
